IS-9436 - change id type from string to number

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -547,7 +547,7 @@ paths:
                   type: object
                   properties:
                     id:
-                      type: string
+                      type: number
                       x-stoplight:
                         id: wat874gwthfw9
                     store_id:
