--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -489,6 +489,181 @@ info:
         <td>VAT at 5%</td>
     </tr>
     </table>
+
+    # Invoice status (status_id)
+
+    <table>
+    <tr>
+        <td>Codice</td>
+        <td>Stato Delle Fatture (IT)</td>
+        <td>Invoices Status (EN)</td>
+    </tr>
+    <tr>
+        <td>SF01</td>
+        <td>Inserita dal cliente</td>
+        <td>Inserted by client</td>
+    </tr>
+    <tr>
+        <td>SF02</td>
+        <td>Validata dal gestore</td>
+        <td>Validated by manager</td>
+    </tr>
+    <tr>
+        <td>SF03</td>
+        <td>Inviata</td>
+        <td>Sent</td>
+    </tr>
+    <tr>
+        <td>SF04</td>
+        <td>Errore</td>
+        <td>Error</td>
+    </tr>
+    <tr>
+        <td>SF05</td>
+        <td>Consegnata</td>
+        <td>Delivered</td>
+    </tr>
+    <tr>
+        <td>SF06</td>
+        <td>Non consegnata (temporaneo)</td>
+        <td>Not delivered (temporary)</td>
+    </tr>
+    <tr>
+        <td>SF07</td>
+        <td>Scartata</td>
+        <td>Rejected</td>
+    </tr>
+    <tr>
+        <td>SF08</td>
+        <td>Accettata dal destinatario</td>
+        <td>Accepted by addressee</td>
+    </tr>
+    <tr>
+        <td>SF09</td>
+        <td>Rifiutata dal destinatario</td>
+        <td>Declined by addressee</td>
+    </tr>
+    <tr>
+        <td>SF10</td>
+        <td>Accettata automaticamente</td>
+        <td>Automatically accepted</td>
+    </tr>
+    <tr>
+        <td>SF11</td>
+        <td>Non consegnata (definitivo)</td>
+        <td>Not delivered (final)</td>
+    </tr>
+    <tr>
+        <td>SF12</td>
+        <td>Rifiutata manualmente</td>
+        <td>Manual rejected</td>
+    </tr>
+    </table>
+
+    # Document Type Id (document_type_id)
+
+    <table>
+    <tr>
+        <td>Codice</td>
+        <td>Tipologia del Documento (IT)</td>
+        <td>Tipes of Document (EN)</td>
+    </tr>
+    <tr>
+        <td>TD01</td>
+        <td>Fattura</td>
+        <td>Invoice</td>
+    </tr>
+    <tr>
+        <td>TD02</td>
+        <td>Acconto/Anticipo su fattura</td>
+        <td>Deposit on invoice</td>
+    </tr>
+    <tr>
+        <td>TD03</td>
+        <td>Acconto/Anticipo su parcella</td>
+        <td>Deposit on bill</td>
+    </tr>
+    <tr>
+        <td>TD04</td>
+        <td>Nota di Credito</td>
+        <td>Credit note</td>
+    </tr>
+    <tr>
+        <td>TD05</td>
+        <td>Nota di Debito</td>
+        <td>Debit note</td>
+    </tr>
+    <tr>
+        <td>TD06</td>
+        <td>Parcella</td>
+        <td>bill</td>
+    </tr>
+    <tr>
+        <td>TD07</td>
+        <td>Fattura semplificata</td>
+        <td>Semplified invoice</td>
+    </tr>
+    <tr>
+        <td>TD08</td>
+        <td>Nota di Credito semplificata</td>
+        <td>Semplified credit note</td>
+    </tr>
+    <tr>
+        <td>TD09</td>
+        <td>Nota di debito semplificata</td>
+        <td>Semplified debit note</td>
+    </tr>
+    <tr>
+        <td>TD12</td>
+        <td>Documento riepilogativo</td>
+        <td>Summirazed Document</td>
+    </tr>
+    <tr>
+        <td>TD16</td>
+        <td>Integrazione fattura reverse charge interno</td>
+        <td>Not delivered (final)</td>
+    </tr>
+    <tr>
+        <td>TD17</td>
+        <td>Integrazione/autofattura per acquisto servizi dall’estero</td>
+        <td>Supplementing/autoinvoice for buying services abroad </td>
+    </tr>
+    <tr>
+        <td>TD18</td>
+        <td>Integrazione per acquisto di beni intracomunitari</td>
+        <td>Supplementing for buying goods infra-comunity</td>
+    </tr>
+    <tr>
+        <td>TD19</td>
+        <td>Integrazione/autofattura per acquisto di beni ex art.17 c.2 DPR 633/72</td>
+        <td>Supplementing/autoinvoice for buying goods ex art.17 c.2 DPR 633/72</td>
+    </tr>
+    <tr>
+        <td>TD20</td>
+        <td>Autofattura per regolarizzazione e integrazione delle fatture (art.6 c.8 d.lgs. 471/97 o art.46 c.5 D.L. 331/93)</td>
+        <td>Autoinvoice for regolation and supplementing invoice (art.6 c.8 d.lgs. 471/97 o art.46 c.5 D.L. 331/93)</td>
+    </tr>
+    <tr>
+        <td>TD21</td>
+        <td>Autofattura per splafonamento</td>
+        <td>Autoinvoice for overshooting</td>
+    </tr>
+    <tr>
+        <td>TD22</td>
+        <td>Estrazione beni da Deposito IVA</td>
+        <td>Goods extraction from IVA deposit</td>
+    </tr>
+    <tr>
+        <td>TD23</td>
+        <td>Estrazione beni da Deposito IVA con versamento dell’IVA</td>
+        <td>Goods extraction from IVA deposit with IVA deposit</td>
+    </tr>
+    <tr>
+        <td>TD24</td>
+        <td>Fattura differita di cui all’art.21, comma 4, lett. a)</td>
+        <td>Pre-recorded invoice of art.21, comma 4, lett. a)</td>
+    </tr>
+    </table>
 servers:
   - url: 'https://mxp-import-export-sn.dev.icadsistemi.com/v1'
     description: development
@@ -1615,6 +1790,41 @@ paths:
           name: outcomes
           description: Indicate whether you also want to receive the outcome files received from the SdI (usable only if you have subscribed to the relevant package).
     parameters: []
+  /invoices/external/status:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvoicesExternalStatusResponse'
+        '403':
+          description: Forbidden
+        '422':
+          description: Unprocessable Entity (WebDAV)
+        '500':
+          description: Internal Server Error
+      operationId: get-invoices-external-status
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: supplier_code
+          required: true
+          description: 'Supplier code, assigned by ICAD Sistemi'
+        - schema:
+            type: string
+          in: query
+          name: start_datetime
+          required: true
+        - schema:
+            type: string
+          in: query
+          name: end_datetime
+          required: true
   /fuelcoupons/transactions:
     get:
       summary: GET Fuelcoupons transactions
@@ -2086,6 +2296,61 @@ components:
                       x-stoplight:
                         id: 4199vs70cdbet
                       description: base64 encoded string
+    InvoicesExternalStatusResponse:
+      type: array
+      x-examples:
+        Example 1:
+          - id: 22552
+            datetime: '2018-08-30T19:05:47.183Z'
+            invoice_state_id: 5
+            invoice_state_name: Consegnata
+            invoice_state_code: SF05
+            number: 270/R3
+            invoice_sdi_id: 116440242
+            document_type_id: '1'
+            document_type_name: Fattura
+            document_type_code: TD01
+      items:
+        type: object
+        properties:
+          invoice_id:
+            type: integer
+            x-stoplight:
+              id: b0k8ky45l2ofj
+            description: Reference to invoice where this record is included
+          issuing_datetime:
+            type: string
+            x-stoplight:
+              id: zgzgeayjrdnwn
+            description: Date time when the invoice is issued
+          status_id:
+            type: integer
+            x-stoplight:
+              id: dxfjc5ottj039
+          status_description:
+            type: string
+            x-stoplight:
+              id: 1frp3c8ty8lph
+          status_code:
+            type: string
+            x-stoplight:
+              id: nwsfrenkygl4q
+          number:
+            type: string
+            description: Number of the invoice
+          sdi_id:
+            type: integer
+            x-stoplight:
+              id: 202cimjq4l9ij
+            description: Id assigned by sdi of the invoice after has been sent
+          document_type_id:
+            type: string
+          document_type_description:
+            type: string
+            x-stoplight:
+              id: ng8y2rwnxmw42
+          document_type_code:
+            type: string
     InvoicesPassiveResponse:
       title: Invoices passive response
       x-stoplight:
