--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -1819,12 +1819,12 @@ paths:
         - schema:
             type: string
           in: query
-          name: start_date
+          name: date_start
           required: true
         - schema:
             type: string
           in: query
-          name: end_date
+          name: date_end
           required: true
   /fuelcoupons/transactions:
     get:
